# prose-log-parser

./: Cargo.toml  README.md
src/: format.rs  log_message.rs  main.rs  pretty_print.rs
src/tui/: app.rs  mod.rs  selected_log_message.rs  stateful_list.rs
